--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- meta -->
     <title>Vite + React + TS</title>
+    <meta name="description" content="A vite website">
     <!-- /meta -->
   </head>
   <body>
