--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- meta -->
-    <title>Vite + React + TS</title>
-    <meta name="description" content="A vite website">
+    <title>Console | Web3 chat for decentralized communities</title>
+    <meta
+            name="description"
+            content="Console is the most secure Web3 chat app offering NFT token gating, decentralized identity, events, and DAO tooling."
+    />
     <!-- /meta -->
   </head>
   <body>
